[gd_scene load_steps=9 format=2]

[ext_resource path="res://WorldRelated/AbstractWorldSlice.tscn" type="PackedScene" id=1]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_001/Level03/WorldSlice_Stage01_03.gd" type="Script" id=2]
[ext_resource path="res://ObjectsRelated/TilesRelated/BaseTileSet.tscn" type="PackedScene" id=3]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/Coin/Pickupables_Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://AreaRegionRelated/Subs/PlayerCaptureAreaRegion/PlayerCaptureAreaRegion.tscn" type="PackedScene" id=5]
[ext_resource path="res://ObjectsRelated/TilesRelated/TileAssets/UncollidablesTileSet.tres" type="TileSet" id=6]
[ext_resource path="res://MiscRelated/VisualsRelated/KeyPressVisual/Visual_KeyPress.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.5, 48 )

[node name="WorldSlice_Stage01_03" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="BaseTileSet_Normal" parent="TileContainer" index="0" instance=ExtResource( 3 )]

[node name="TileMap" parent="TileContainer/BaseTileSet_Normal" index="0"]
tile_data = PoolIntArray( -2031582, 0, 4, -2031581, 0, 4, -2031580, 0, 4, -1966046, 0, 4, -1966044, 0, 4, -1900510, 0, 4, -1900509, 0, 4, -1900508, 0, 4, -1900504, 0, 4, -1900503, 0, 4, -1900502, 0, 4, -1834968, 0, 4, -1834966, 0, 4, -1769432, 0, 4, -1769431, 0, 4, -1769430, 0, 4, -1703899, 0, 4, -1703898, 0, 4, -1703897, 0, 4, -1638363, 0, 4, -1638361, 0, 4, -1572827, 0, 4, -1572826, 0, 4, -1572825, 0, 4, -1507282, 0, 4, -1507281, 0, 4, -1507280, 0, 4, -1441746, 0, 4, -1441744, 0, 4, -1376228, 0, 4, -1376227, 0, 4, -1376226, 0, 4, -1376210, 0, 4, -1376209, 0, 4, -1376208, 0, 4, -1310692, 0, 4, -1310690, 0, 4, -1245156, 0, 4, -1245155, 0, 4, -1245154, 0, 4, -1245144, 0, 4, -1245143, 0, 4, -1245142, 0, 4, -1179608, 0, 4, -1179606, 0, 4, -1179600, 0, 4, -1179599, 0, 4, -1179598, 0, 4, -1114084, 0, 4, -1114083, 0, 4, -1114082, 0, 4, -1114072, 0, 4, -1114071, 0, 4, -1114070, 0, 4, -1114064, 0, 4, -1114062, 0, 4, -1048548, 0, 4, -1048546, 0, 4, -1048528, 0, 4, -1048527, 0, 4, -1048526, 0, 4, -983012, 0, 4, -983011, 0, 4, -983010, 0, 4, -917461, 0, 4, -917460, 0, 4, -917459, 0, 4, -851925, 0, 4, -851923, 0, 4, -786389, 0, 4, -786388, 0, 4, -786387, 0, 4, -720868, 0, 0, -720867, 0, 2, -655333, 0, 131076, -589797, 0, 262148, -589786, 0, 4, -589785, 0, 4, -589784, 0, 4, -524250, 0, 4, -524248, 0, 4, -458743, 0, 0, -458742, 0, 1, -458741, 0, 1, -458740, 0, 1, -458739, 0, 1, -458738, 0, 2, -458714, 0, 4, -458713, 0, 4, -458712, 0, 4, -458705, 0, 4, -458704, 0, 4, -458703, 0, 4, -327683, 0, 131076, -393212, 0, 0, -393211, 0, 1, -393210, 0, 1, -393209, 0, 1, -393208, 0, 2, -393201, 0, 0, -393200, 0, 1, -393199, 0, 1, -393198, 0, 131074, -393169, 0, 4, -393167, 0, 4, -262147, 0, 196612, -327662, 0, 196612, -327633, 0, 4, -327632, 0, 4, -327631, 0, 4, -196611, 0, 196612, -262134, 0, 131072, -262133, 0, 1, -262132, 0, 1, -262131, 0, 131074, -262126, 0, 196612, -262102, 0, 4, -262101, 0, 4, -131075, 0, 262148, -196598, 0, 196612, -196595, 0, 196612, -196592, 0, 0, -196591, 0, 1, -196590, 0, 262146, -196574, 0, 4, -196573, 0, 4, -196572, 0, 4, -196566, 0, 4, -196565, 0, 4, -131062, 0, 262148, -131059, 0, 196612, -131044, 0, 4, -131043, 0, 4, -131042, 0, 4, -131038, 0, 4, -131036, 0, 4, -65523, 0, 196612, -65508, 0, 4, -65506, 0, 4, -65502, 0, 4, -65501, 0, 4, -65500, 0, 4, 65532, 0, 131076, 13, 0, 196612, 24, 0, 4, 25, 0, 4, 28, 0, 4, 29, 0, 4, 30, 0, 4, 39, 0, 4, 40, 0, 4, 41, 0, 4, 131068, 0, 196612, 65549, 0, 196612, 65560, 0, 4, 65561, 0, 4, 65575, 0, 4, 65577, 0, 4, 196604, 0, 196612, 131085, 0, 262148, 131105, 0, 4, 131106, 0, 4, 131107, 0, 4, 131111, 0, 4, 131112, 0, 4, 131113, 0, 4, 262140, 0, 196612, 196641, 0, 4, 196643, 0, 4, 327676, 0, 196612, 262152, 0, 131076, 262177, 0, 4, 262178, 0, 4, 262179, 0, 4, 262187, 0, 4, 262188, 0, 4, 262189, 0, 4, 393212, 0, 196612, 327688, 0, 262148, 327707, 0, 4, 327708, 0, 4, 327709, 0, 4, 327723, 0, 4, 327725, 0, 4, 458748, 0, 196612, 458751, 0, 131076, 393225, 0, 0, 393226, 0, 1, 393227, 0, 1, 393228, 0, 1, 393229, 0, 1, 393230, 0, 1, 393231, 0, 2, 393237, 0, 131076, 393243, 0, 4, 393245, 0, 4, 393259, 0, 4, 393260, 0, 4, 393261, 0, 4, 524284, 0, 196612, 524287, 0, 196612, 458773, 0, 196612, 458779, 0, 4, 458780, 0, 4, 458781, 0, 4, 589820, 0, 196612, 589823, 0, 196612, 524290, 0, 0, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 2, 524307, 0, 0, 524308, 0, 1, 524309, 0, 262146, 655356, 0, 196612, 655359, 0, 196612, 589834, 0, 131076, 589846, 0, 4, 589847, 0, 4, 589848, 0, 4, 720892, 0, 196612, 720895, 0, 262148, 655370, 0, 196612, 655382, 0, 4, 655384, 0, 4, 786428, 0, 196612, 720901, 0, 131076, 720906, 0, 196612, 720918, 0, 4, 720919, 0, 4, 720920, 0, 4, 720925, 0, 4, 720926, 0, 4, 720927, 0, 4, 851964, 0, 262148, 786437, 0, 196612, 786442, 0, 262148, 786461, 0, 4, 786463, 0, 4, 851973, 0, 196612, 851997, 0, 4, 851998, 0, 4, 851999, 0, 4, 917509, 0, 196612, 983045, 0, 262148 )

[node name="BaseTileSet_Energized" parent="TileContainer" index="1" instance=ExtResource( 3 )]
energy_mode = 1

[node name="TileMap" parent="TileContainer/BaseTileSet_Energized" index="0"]
modulate = Color( 0.862745, 0.905882, 0.34902, 1 )
tile_data = PoolIntArray( -1769442, 0, 131072, -1769441, 0, 131073, -1769440, 0, 131073, -1769439, 0, 131074, -1703906, 0, 196608, -1703903, 0, 196610, -1638370, 0, 262144, -1638369, 0, 262145, -1638368, 0, 262145, -1638367, 0, 262146, -1441759, 0, 131076, -1376223, 0, 262148, -983004, 0, 131072, -983003, 0, 131073, -983002, 0, 131073, -983001, 0, 131074, -917468, 0, 196608, -917465, 0, 196610, -851932, 0, 262144, -851931, 0, 262145, -851930, 0, 262145, -851929, 0, 262146, -655330, 0, 131072, -655329, 0, 1, -655328, 0, 1, -655327, 0, 2, -589794, 0, 196612, -524269, 0, 0, -524268, 0, 1, -524267, 0, 1, -524266, 0, 1, -524265, 0, 1, -524264, 0, 1, -524263, 0, 1, -524262, 0, 2, -524258, 0, 196612, -458722, 0, 196612, -393186, 0, 262144, -393185, 0, 2, -393183, 0, 0, -393182, 0, 2, -131072, 0, 0, -131071, 0, 1, -131070, 0, 1, -131069, 0, 1, -131068, 0, 1, -131067, 0, 1, -131066, 0, 1, -131065, 0, 1, -131064, 0, 1, -131063, 0, 1, -1, 0, 131076, -65515, 0, 131076, 65535, 0, 196612, 16, 0, 131076, 21, 0, 196612, 131071, 0, 262148, 65552, 0, 262148, 65557, 0, 196612, 65582, 0, 131072, 65583, 0, 131073, 65584, 0, 131074, 131072, 0, 0, 131073, 0, 1, 131074, 0, 1, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 2, 131093, 0, 196612, 131118, 0, 262144, 131119, 0, 262145, 131120, 0, 262146, 196629, 0, 196612, 262160, 0, 131076, 262165, 0, 262144, 262166, 0, 1, 262167, 0, 2, 327696, 0, 262148, 393253, 0, 131072, 393254, 0, 131073, 393255, 0, 131073, 393256, 0, 131074, 458789, 0, 196608, 458792, 0, 196610, 524325, 0, 262144, 524326, 0, 262145, 524327, 0, 262145, 524328, 0, 262146, 720909, 0, 131076, 720913, 10, 131073, 786445, 0, 196612, 851981, 0, 196612, 983037, 0, 0, 983038, 0, 1, 983039, 0, 1, 917504, 0, 1, 917505, 0, 1, 917506, 0, 2, 917517, 0, 196612, 983048, 0, 0, 983049, 0, 1, 983050, 0, 1, 983051, 0, 1, 983052, 0, 1, 983053, 0, 262146 )

[node name="BaseTileSet" parent="TileContainer" index="2" instance=ExtResource( 3 )]

[node name="TileMap" parent="TileContainer/BaseTileSet" index="0"]
tile_set = ExtResource( 6 )
tile_data = PoolIntArray( -393198, 10, 131072, -262134, 10, 131073, -262131, 10, 131072, -196590, 10, 131075, 524309, 10, 131075 )

[node name="BaseTileSet2" parent="TileContainer" index="3" instance=ExtResource( 3 )]
energy_mode = 1

[node name="TileMap" parent="TileContainer/BaseTileSet2" index="0"]
modulate = Color( 0.862745, 0.905882, 0.34902, 1 )
tile_set = ExtResource( 6 )
tile_data = PoolIntArray( -655330, 10, 131073, -393186, 10, 131074, 262165, 10, 131074, 983053, 10, 131075 )

[node name="PlayerCaptureAreaRegion" parent="AreaRegionContainer" index="0" instance=ExtResource( 5 )]
position = Vector2( 1005, -275 )
duration_for_capture = 2.0

[node name="CollisionShape2D" parent="AreaRegionContainer/PlayerCaptureAreaRegion" index="0"]
position = Vector2( 25.5, 35 )
shape = SubResource( 1 )

[node name="Pickupables_Coin" parent="CoinsContainer" index="0" instance=ExtResource( 4 )]
position = Vector2( 749, 103 )

[node name="Pickupables_Coin2" parent="CoinsContainer" index="1" instance=ExtResource( 4 )]
position = Vector2( 540, 105 )

[node name="Pickupables_Coin3" parent="CoinsContainer" index="2" instance=ExtResource( 4 )]
position = Vector2( 529, -215 )

[node name="Pickupables_Coin4" parent="CoinsContainer" index="3" instance=ExtResource( 4 )]
position = Vector2( 1101, -803 )

[node name="Position2D" type="Position2D" parent="PlayerSpawnCoordsContainer" index="0"]
position = Vector2( 48, 50 )

[node name="MessegesContainer" type="Node2D" parent="." index="5"]

[node name="Label" type="Label" parent="MessegesContainer" index="0"]
margin_left = 89.0
margin_top = 6.0
margin_right = 129.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Nothing lasts forever,
and that includes your battery"
align = 1
valign = 1

[node name="Label2" type="Label" parent="MessegesContainer" index="1"]
margin_left = 562.0
margin_top = 188.0
margin_right = 753.0
margin_bottom = 219.0
rect_rotation = 270.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "When you run out of energy,
you can't perform actions"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MessegesContainer" index="2"]
margin_left = -97.0
margin_top = 493.0
margin_right = 103.0
margin_bottom = 554.0
custom_constants/separation = 10

[node name="Label3Rewind" type="Label" parent="MessegesContainer/VBoxContainer" index="0"]
margin_right = 200.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "You can rewind time by holding"
align = 1
valign = 1

[node name="VKP_Rewind" parent="MessegesContainer/VBoxContainer" index="1" instance=ExtResource( 7 )]
margin_left = 79.0
margin_top = 24.0
margin_right = 121.0
margin_bottom = 61.0
size_flags_horizontal = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="MessegesContainer" index="3"]
margin_left = 855.0
margin_top = -264.0
margin_right = 1106.0
margin_bottom = -192.0
rect_rotation = 180.0
custom_constants/separation = 10

[node name="Label4Zoomout" type="Label" parent="MessegesContainer/VBoxContainer2" index="0"]
margin_right = 251.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "You can toggle zoom levels by pressing"
align = 1
valign = 1

[node name="VKP_ZoomOut" parent="MessegesContainer/VBoxContainer2" index="1" instance=ExtResource( 7 )]
margin_left = 104.0
margin_top = 24.0
margin_right = 146.0
margin_bottom = 61.0
size_flags_horizontal = 6

[editable path="TileContainer/BaseTileSet_Normal"]
[editable path="TileContainer/BaseTileSet_Energized"]
[editable path="TileContainer/BaseTileSet"]
[editable path="TileContainer/BaseTileSet2"]
[editable path="AreaRegionContainer/PlayerCaptureAreaRegion"]
